fixed issue where elements on mobile view exceeded width of phone

--- a/style.css
+++ b/style.css
@@ -359,7 +359,6 @@ nav a:hover {
 .contact-form h2 {
   color: var(--cream);
   margin-bottom: 16px;
-  width: 350px;
   text-align: center;
 }
 
